# CloverUI

./: README.md  capacitor.config.json  package-lock.json  package.json
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/example/app/: LlamaPlugin.java  MainActivity.java
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
www/: index.html
